Thu Mar 17 11:36:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/option.c (inspect_tcpi_msec): more accurate condition
	  for TCPI msec member inspection function.
	  [ruby-core:74388] [Bug #12185]

Thu Mar 17 08:13:43 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/-ext-/time/test_new.rb (test_timespec_new): Time#gmtoff values
	  are the same only when both or neither of the Time objects are in
	  summer time (daylight-saving time).

Thu Mar 17 07:17:36 2016  Eric Hodel  <drbrain@segment7.net>

	* marshal.c (r_object0):  raise ArgumentError when linking to undefined
	  object.

Thu Mar 17 00:45:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* test/ruby/test_bignum.rb: Make sure to use Bignum values in the tests.

Wed Mar 16 23:10:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/keywords (alias, undef): symbol literals are allowed.

	* parse.y (parse_percent): should parse symbol literals for alias
	  and undef.  [ruby-dev:47681] [Bug #8851]

Wed Mar 16 21:39:39 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/JIS: update Unicode's notice. [Bug #11844]

Wed Mar 16 20:03:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (proc_binding): proc from symbol can not make a binding.
	  [ruby-core:74100] [Bug #12137]

Wed Mar 16 18:42:45 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: Fixed and activated a test for Cherokee.

Wed Mar 16 17:58:56 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: Fixed a logical error.

Wed Mar 16 17:57:34 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: Adding tests for Cherokee.
	  One test not yet working.
	  (with Kimihito Matsui)

Wed Mar 16 15:44:05 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: Adding tests for actual Unicode
	  case mapping. Fixing some aliasing issues.
	  (with Kimihito Matsui)

Tue Mar 15 21:38:28 2016  Tanaka Akira  <akr@fsij.org>
